--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Read Output
         run: |
-          echo ${{ steps.release.outputs.content}}
+          echo "${{ steps.release.outputs.content}}"
 
       - name: Release
         uses: softprops/action-gh-release@v1
@@ -45,4 +45,4 @@ jobs:
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          preCommands: wrangler kv:key put --binding=INI_BLOGS blogs ${{ steps.release.outputs.content}}
+          preCommands: wrangler kv:key put --binding=INI_BLOGS blogs "${{ steps.release.outputs.content}}"
