--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,4 +45,4 @@ jobs:
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          preCommands: wrangler kv:key put --binding=INI_BLOGS blogs ${{ steps.release.outputs.content}}
+          preCommands: wrangler kv:key put --binding=INI_BLOGS blogs "${{ steps.release.outputs.content}}"
