--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,8 +28,8 @@ jobs:
         id: release
         run: |
           cat release.json
-          content=$(jq -r 'tojson' release.json | sed 's/"/\\"/g' | sed "s/'/\\'/g" | sed 's/`/\\`/g' | sed 's/\\n/\\\\n/g' | sed 's/</\\</g' | sed 's/>/\\>/g')
-          echo "content=$content" >> "$GITHUB_OUTPUT"
+          content=$(jq -r 'tojson' release.json)
+          printf "content=$content" >> "$GITHUB_OUTPUT"
 
       - name: Release
         uses: softprops/action-gh-release@v1
