--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "node scripts/build.mjs"
   },
   "dependencies": {
+    "execa": "^8.0.1",
     "globby": "^14.0.0",
     "gray-matter": "^4.0.3",
     "hono": "^3.10.3"
