--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,8 +27,7 @@ jobs:
       - name: Read release.txt
         id: release
         run: |
-          cat release.txt
-          content=$(jq -r 'tostring' release.txt)
+          content=$(cat release.txt)
           echo "content=$content" >> "$GITHUB_OUTPUT"
 
       - name: Release
