--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,7 +22,7 @@ jobs:
         run: yarn install
 
       - name: Run build
-        run: ulimit -S -s unlimited && yarn build
+        run: ulimit -S -s unlimited && node scripts/build.mjs
 
       # - name: Deploy
       #   uses: cloudflare/wrangler-action@v3
