--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -28,4 +28,4 @@ jobs:
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          preCommands: node scripts/build.mjs
+          preCommands: ulimit -S -s unlimited && node scripts/build.mjs
