--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,8 +21,11 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
-      # - name: Run build
-      #   run: ulimit -S -s unlimited && node scripts/build.mjs
+      - name: Run build
+        run: ulimit -S -s unlimited && node scripts/build.mjs
+        with:
+          env:
+            CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
 
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
